# AlgorytmGenetyczny_Sudoku

./: CMakeLists.txt  README.md  board_operations.c  board_operations.h  crossover.c  crossover.h  evolution.c  evolution.h  main.c  mutation.c  mutation.h  population.c  population.h  selection.c  selection.h  sudoku.c  sudoku.h
